router 守卫、目录结构修改细化、适配i x

--- a/src/assets/less/Common.less
+++ b/src/assets/less/Common.less
@@ -1,6 +1,6 @@
 @color: #f7f7f7;
-@theme: #93b69c;
-@auxiliary: #fed6e3;
+@theme: #212129;
+@auxiliary: #ececec;
 @text: #949494;
 //@theme: #5ee7df;
 //@auxiliary: #b490ca;
