--- a/src/assets/less/Reset.less
+++ b/src/assets/less/Reset.less
@@ -4,5 +4,5 @@
 }
 
 html, body {
-  background: linear-gradient(bottom, #ededed, #FFF);
+  //background: linear-gradient(bottom, #ededed, #FFF);
 }
