--- a/src/assets/less/Components.less
+++ b/src/assets/less/Components.less
@@ -2,7 +2,7 @@
   min-height: 1rem;
   background: #FFF;
   border-radius: 0.2rem;
-  padding: 0.2rem;
+  padding: 0.3rem;
   margin: 0 0 0.4rem 0;
-  box-shadow: 0px 0.08rem 0.24rem 0px rgba(0,0,0,0.05);;
+  box-shadow: 0px 0.08rem 0.24rem 0px rgba(0, 0, 0, 0.11);;
 }
