--- a/src/assets/less/Views.less
+++ b/src/assets/less/Views.less
@@ -321,7 +321,7 @@
               width: 48%;
               height: 2.5rem;
               margin-bottom: 0.3rem;
-              border-radius: 0.3rem;
+              border-radius: 0.1rem;
               display: flex;
               align-items: center;
               overflow: hidden;
@@ -329,6 +329,18 @@
               img {
                 width: 100%;
               }
+            }
+          }
+
+          .video {
+            height: 4.8rem;
+            background: #000;
+            border-radius: 0.1rem;
+            overflow: hidden;
+            video {
+              width: 100%;
+              height: 100%;
+              background-size: cover;
             }
           }
         }
@@ -362,7 +374,7 @@
   }
 
   .details-views {
-
+    min-height: 100vh;
   }
 
   .sign-views, .exam-views {
